apply template file

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,8 @@
-<img src="{{ qrcode_url }}" width="300" height="300" />
+<html>
+<head>
+  <title>{{ title }} - Microblog</title>
+</head>
+<body>
+  <h1>Hello, {{ user.username }}!</h1>
+</body>
+</html>
