append qrcode module

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,6 @@
   <title>{{ title }} - Microblog</title>
 </head>
 <body>
-  <h1>Hello, {{ user.username }}!</h1>
+  <img src="{{ qrcode_url }}" width="300" height="300" />
 </body>
 </html>
